# VITS_Hindi_TTS

./: .gitignore  CHANGELOG.md  README.md  Start Studio.bat  TASKS.md  conftest.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  INFERENCE.md  SETUP.md  SMOKE_TEST.md  STATUS.md  TRAINING.md  TROUBLESHOOTING.md
hindi_tts_builder/: __init__.py
hindi_tts_builder/cli/: __init__.py  main.py  server.py
hindi_tts_builder/data/: __init__.py  align.py  dataset.py  download.py  manifest.py  pipeline.py  qc.py  segment.py
hindi_tts_builder/eval/: __init__.py  metrics.py  runner.py  test_set.py
hindi_tts_builder/frontend/: __init__.py  hindi_num.py  normalizer.py  numbers.py  pipeline.py  prosody.py  schwa.py  transliterate.py
hindi_tts_builder/inference/: __init__.py  engine.py  manifest.py  roundtrip.py  srt_renderer.py
hindi_tts_builder/train/: __init__.py  checkpoint.py  config.py  dataset.py  tokenizer.py  trainer.py
hindi_tts_builder/utils/: __init__.py  audio.py  project.py  srt.py
hindi_tts_builder/web/: __init__.py  app.py  jobs.py
hindi_tts_builder/web/templates/: index.html
scripts/: smoke_test.sh
tests/: test_checkpoint.py  test_cli.py  test_data_logic.py  test_engine_manifest.py  test_eval.py  test_hindi_num.py  test_manifest.py  test_normalizer.py  test_numbers.py  test_pipeline.py  test_project.py  test_prosody.py  test_roundtrip.py  test_schwa.py  test_srt.py  test_srt_renderer.py  test_tokenizer.py  test_training_config.py  test_transliterate.py
